# goes-glm

./: .gitignore  .markdownlintignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  docker_env  environment.yml  mypy.ini  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: continuous-integration.yml
examples/: collection.json  item.json  item2.json  item3.json
examples/OR_GLM-L2-LCFA_G16_s20181591447400_e20181591448000/: OR_GLM-L2-LCFA_G16_s20181591447400_e20181591448000.json  OR_GLM-L2-LCFA_G16_s20181591447400_e20181591448000_c20181591448028.nc  events.parquet  flashes.parquet  groups.parquet
examples/OR_GLM-L2-LCFA_G17_s20182831047000_e20182831047200/: OR_GLM-L2-LCFA_G17_s20182831047000_e20182831047200.json  OR_GLM-L2-LCFA_G17_s20182831047000_e20182831047200_c20182831047223.nc  events.parquet  flashes.parquet  groups.parquet
examples/OR_GLM-L2-LCFA_G17_s20200160612000_e20200160612110/: OR_GLM-L2-LCFA_G17_s20200160612000_e20200160612110.json  events.parquet  flashes.parquet  groups.parquet
examples/OR_GLM-L2-LCFA_G18_s20230261900000_e20230261900200/: OR_GLM-L2-LCFA_G18_s20230261900000_e20230261900200.json  events.parquet  flashes.parquet  groups.parquet
examples/OR_GLM-L2-LCFA_G19_s20250971300200_e20250971300400/: OR_GLM-L2-LCFA_G19_s20250971300200_e20250971300400.json  events.parquet  flashes.parquet  groups.parquet
extension/: README.md  schema.json
scripts/: create_examples.py  test
src/stactools/goes_glm/: __init__.py  commands.py  constants.py  netcdf.py  parquet.py  stac.py
tests/: test_commands.py  test_module.py  test_stac.py
tests/data-files/: OR_GLM-L2-LCFA_G16_s20181591447400_e20181591448000_c20181591448028-events.parquet  OR_GLM-L2-LCFA_G16_s20181591447400_e20181591448000_c20181591448028-flashes.parquet  OR_GLM-L2-LCFA_G16_s20181591447400_e20181591448000_c20181591448028-groups.parquet  OR_GLM-L2-LCFA_G16_s20181591447400_e20181591448000_c20181591448028.nc  OR_GLM-L2-LCFA_G16_s20182901026200_e20182901026400_c20182901026423.nc  OR_GLM-L2-LCFA_G16_s20182980537000_e20182980537200_c20182980537216.nc  OR_GLM-L2-LCFA_G16_s20203662359400_e20210010000004_c20210010000030.json  OR_GLM-L2-LCFA_G16_s20203662359400_e20210010000004_c20210010000030.nc  OR_GLM-L2-LCFA_G16_s20210820633400_e20210820634005_c20210820634025.nc  OR_GLM-L2-LCFA_G17_s20182831047000_e20182831047200_c20182831047223.nc  OR_GLM-L2-LCFA_G17_s20200160612000_e20200160612110_c20200160612335.nc  OR_GLM-L2-LCFA_G17_s20221542100000_e20221542100200_c20221542100217.json  OR_GLM-L2-LCFA_G17_s20221542100000_e20221542100200_c20221542100217.nc  OR_GLM-L2-LCFA_G18_s20230261900000_e20230261900200_c20230261900213.nc  OR_GLM-L2-LCFA_G19_s20250971300200_e20250971300400_c20250971300420.nc  collection.json
