[metadata]
name = stactools-goes-glm
version = attr: stactools.goes_glm.__version__
description = stactools package for the Geostationary Lightning Mapper (GLM) on the GOES-16 satellite. 
long_description = file: README.md
long_description_content_type = text/markdown
author = Matthias Mohr
author_email = matthias.mohr@radiant.earth
url = https://github.com/stactools-packages/goes-glm
project_urls =
    Issues = https://github.com/stactools-packages/goes-glm/issues
keywords =
    stactools
    goes
    goes-16
    goes-r
    lightning
    glm
    STAC
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
package_dir =
    = src
packages = find_namespace:
install_requires =
    stactools >= 0.3.1

[options.packages.find]
where = src
