[metadata]
name = stactools-goes-glm
version = attr: stactools.goes_glm.__version__
description = stactools package for the Geostationary Lightning Mapper (GLM) on the GOES-16/R, GOES-17/S, and GOES-18/T satellites. 
long_description = file: README.md
long_description_content_type = text/markdown
author = Matthias Mohr
author_email = matthias.mohr@radiant.earth
url = https://github.com/stactools-packages/goes-glm
project_urls =
    Issues = https://github.com/stactools-packages/goes-glm/issues
keywords =
    stactools
    goes
    glm
    lightning
    STAC
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
[options]
package_dir =
    = src
packages = find_namespace:
install_requires =
    stactools >= 0.4.0
    python-dateutil >= 2.7.0
    types-python-dateutil >= 2.7.0
    netCDF4 >= 1.6.0
    geopandas >= 0.11.1
    pyarrow >= 8.0.0
    shapely >= 1.8.2
    pystac < 1.12

[options.packages.find]
where = src
